// (ytz) activate venv and compile with
// python3 -m grpc_tools.protoc -I proto/ --python_out=. --grpc_python_out=. proto/parallel/service.proto
// this specific folder setup is required for import paths in generated _pb files to be correct.

syntax = "proto3";

service Worker {
    rpc Submit(PickleData) returns (PickleData) {}
    rpc Status(StatusRequest) returns (StatusResponse) {}
}

message PickleData {
    bytes binary = 1;
}

// Incase we want to send data in the future
message StatusRequest{

}

message StatusResponse {
	string nvidia_driver = 1;
	string git_sha = 2;
}